# calcium_imaging_analysis_pipeline

./: LICENSE.txt  README.md  isxtools.py  pyproject.toml  rat_pca-ica_pipeline.ipynb  requirements.txt  teststest.py
cgk_calcium_tools/: __init__.py  analysis_utils.py  cellset_functions.py  cellsets_handler.py  conftest.py  default_parameter.json  filehandler.py  files_io.py  handlers_functions.py  image_tools.py  interactive.py  isx_aux_functions.py  isx_gui.py  isx_pipeline_functions.py  isxp_reader.py  isxtools.py  jupyter_outputs.py  longitudinal_registration.py  making_small_movie.py  params_tools.py  pipeline_functions.py  prj_handler.py  prj_template.json  processing.py  recordings_handler.py  single_plane_template.json  test_isx_aux_functions.py  test_isx_pipeline_functions.py  wip.py
cgk_calcium_tools/tests/: test_init.py
tests/: readme.md  test_init.py
